compiler/testData/diagnostics/tests/shadowing/ShadowVariableInNestedBlock.jet
fun ff(): Int {
    var i = 1
    <!UNUSED_FUNCTION_LITERAL!>{
        val <!NAME_SHADOWING!>i<!> = 2
    }<!>
    return i
}
